Revert "start some modernization"
This reverts commit b4c4746eb623ddd5cf633967e7a9b5c388280d44.